test: role 인증 구조에 맞춰 주문 테스트 헬퍼 수정